"""Module definition for Tink C++."""
module(
    name = "tink_cc",
    version = "1.7.0",
)

bazel_dep(name = "rules_cc", version = "0.0.4")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "googletest", version = "1.12.1", repo_name = "com_google_googletest")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")

abseil_extension = use_extension("//:deps.bzl", "abseil_extension")
boringssl_extension = use_extension("//:deps.bzl", "boringssl_extension")
rapidjson_extension = use_extension("//:deps.bzl", "rapidjson_extension")
wycheproof_extension = use_extension("//:deps.bzl", "wycheproof_extension")
use_repo(abseil_extension, "com_google_absl")
use_repo(boringssl_extension, "boringssl")
use_repo(rapidjson_extension, "rapidjson")
use_repo(wycheproof_extension, "wycheproof")
