# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Tink C++ Bazel Module definition."""
module(
    name = "tink_cc",
    version = "1.7.0",
)

bazel_dep(name = "rules_cc", version = "0.0.5")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "googletest", version = "1.12.1", repo_name = "com_google_googletest")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
bazel_dep(name = "boringssl", version = "0.0.0-20230215-5c22014")
bazel_dep(name = "rapidjson", version = "1.1.0")

abseil_extension = use_extension("//:extensions.bzl", "abseil_extension")
wycheproof_extension = use_extension("//:extensions.bzl", "wycheproof_extension")
use_repo(abseil_extension, "com_google_absl")
use_repo(wycheproof_extension, "wycheproof")
