load("@io_bazel_rules_go//go:def.bzl", "nogo")
load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

nogo(
    name = "tink_nogo",
    vet = True,
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/google/tink/go
gazelle(
    name = "gazelle",
    args = [
        "-go_naming_convention=go_default_library",
    ],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
